# wordbook

./: .gitignore  README.md  check_databases.py  main.py  pyproject.toml  streamlit_app.py  test_integration.py  unmastered_sentences.py
src/wordbook/: __init__.py  i18n.py  notion_client.py
